--- a/4.5 Cat Photos App/index.html
+++ b/4.5 Cat Photos App/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>CatPhotoApp</title>
+    <link re="Stylesheet" href="style.css">
   </head>
   <body>
     <main>
